Convert bookshop to editable regions

--- a/src/_includes/layouts/component-page.html
+++ b/src/_includes/layouts/component-page.html
@@ -1,4 +1,4 @@
 ---
 layout: layouts/layout.html
 ---
-{% bookshop_include "page" content_blocks: content_blocks %}
+{% include "page.liquid" content_blocks: content_blocks %}
