Test live editing on pages using page helper

--- a/src/_includes/page.liquid
+++ b/src/_includes/page.liquid
@@ -1,6 +1,11 @@
-<div>
+<div
+  data-editable="array"
+  data-component-key="_name"
+  data-id-key="_name">
   {% for block in content_blocks %}
-    {% bind_include block._name
-      , block %}
+    <editable-array-item data-component="{{ block._name }}" data-id="{{ block._name }}">
+      {% bind_include block._name
+        , block %}
+    </editable-array-item>
   {% endfor %}
 </div>
